Minor: Respect KDE HIG

--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -227,7 +227,7 @@
                             Give a try to the annotating tools. You might find everything that is needed to explain your screenshots there: arrows, pen, markers, text boxes, numbers, even smileys. It is possible to change the tool parameters and add effects (shadow, grayscale, and border).
                         </para>
                         <para>
-                            When you think that annotating is finished press the <guibutton>Annotation done</guibutton> button.
+                            When you think that annotating is finished press the <guibutton>Annotation Done</guibutton> button.
                         </para>
                     </listitem>
                 </varlistentry>
