Inconsistency between man page and actual available command line options
Man page mentions `--clipboard` but in `SpectacleCore.cpp` it actually expects `--copy-image`.
Also, `--copy-path` is not mentioned at all in the man page.
Change man page to reflect codee and add `--copy-path` to man page.

BUG: 446710

--- a/doc/man-spectacle.1.docbook
+++ b/doc/man-spectacle.1.docbook
@@ -132,9 +132,16 @@
 </varlistentry>
 
 <varlistentry>
-<term><option>-c, --clipboard</option></term>
+<term><option>-c, --copy-image</option></term>
 <listitem>
 <para>In background mode, copy screenshot to clipboard.</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><option>-C, --copy-path</option></term>
+<listitem>
+<para>In background mode, copy screenshot file path to clipboard.</para>
 </listitem>
 </varlistentry>
 
