Respect -c, in combination with -b, to only save image into clipboard
Rearranged code to check 'copy-image' before 'output', in case the command goes like:
spectacle -b -c -o ./file.png

So the file also gets saved. Otherwise, with the old arrangement, it would only save
to clipboard ignoring '-o'.

BUG: 447811
FIXED-IN: 22.04

--- a/doc/man-spectacle.1.docbook
+++ b/doc/man-spectacle.1.docbook
@@ -134,7 +134,7 @@
 <varlistentry>
 <term><option>-c, --copy-image</option></term>
 <listitem>
-<para>In background mode, copy screenshot to clipboard.</para>
+<para>In background mode, copy screenshot only to clipboard, unless -o is also used.</para>
 </listitem>
 </varlistentry>
 
