Fix a typo in the manual
The short form of --pointer is -p; -i is the short form of
--new-instance.

Confirmed using `spectacle --help`.

--- a/doc/man-spectacle.1.docbook
+++ b/doc/man-spectacle.1.docbook
@@ -160,7 +160,7 @@
 </varlistentry>
 
 <varlistentry>
-<term><option>-i, --pointer</option></term>
+<term><option>-p, --pointer</option></term>
 <listitem>
 <para>In background mode, include pointer in the screenshot.</para>
 </listitem>
